Added Cancel Booking and List of Booking and Open API Swagger Docs